--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/css/all.min.css">
-        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/all.min.css">
+        <link rel="stylesheet" href="css/main.css">
         <title>Bezel | Mai Allam</title>
     </head>
     <body>
@@ -97,7 +97,7 @@
                 </div>
                 <div class="carousel-inner vh-100">
                     <div class="carousel-item active">
-                        <img src="/images/bg-image-28.jpg" class="d-block w-100" alt="carousel image 1">
+                        <img src="images/bg-image-28.jpg" class="d-block w-100" alt="carousel image 1">
                         <div class="carousel-caption d-none d-md-block cover vh-100">
                             <div class="cover-content">
                                 <h1>Get Awesome.</h1>
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="/images/bg-image-29.jpg" class="d-block w-100" alt="carousel image 2">
+                        <img src="images/bg-image-29.jpg" class="d-block w-100" alt="carousel image 2">
                         <div class="carousel-caption d-none d-md-block cover vh-100">
                             <div class="cover-content">
                                 <h1>Create With Bezel.</h1>
@@ -174,7 +174,7 @@
                     <div class="col-sm-12 col-md-6 col-xl-3">
                         <div
                             class="team-member card position-relative border-0 rounded-0">
-                            <img src="/images/team-1.jpg" class="card-img-top"
+                            <img src="images/team-1.jpg" class="card-img-top"
                                 alt="team-1">
                             <div
                                 class="card-layer d-flex flex-column justify-content-between position-absolute top-0 bottom-0 start-0 end-0 bg-bluelight">
@@ -211,7 +211,7 @@
                     <div class="col-sm-12 col-md-6 col-xl-3">
                         <div
                             class="team-member card position-relative border-0 rounded-0">
-                            <img src="/images/team-2.jpg" class="card-img-top"
+                            <img src="images/team-2.jpg" class="card-img-top"
                                 alt="team-2">
                             <div
                                 class="card-layer d-flex flex-column justify-content-between position-absolute top-0 bottom-0 start-0 end-0 bg-bluelight">
@@ -248,7 +248,7 @@
                     <div class="col-sm-12 col-md-6 col-xl-3">
                         <div
                             class="team-member card position-relative border-0 rounded-0">
-                            <img src="/images/team-3.jpg" class="card-img-top"
+                            <img src="images/team-3.jpg" class="card-img-top"
                                 alt="team-3">
                             <div
                                 class="card-layer d-flex flex-column justify-content-between position-absolute top-0 bottom-0 start-0 end-0 bg-bluelight">
@@ -285,7 +285,7 @@
                     <div class="col-sm-12 col-md-6 col-xl-3">
                         <div
                             class="team-member card position-relative border-0 rounded-0">
-                            <img src="/images/team-4.jpg" class="card-img-top"
+                            <img src="images/team-4.jpg" class="card-img-top"
                                 alt="team-4">
                             <div
                                 class="card-layer d-flex flex-column justify-content-between position-absolute top-0 bottom-0 start-0 end-0 bg-bluelight">
@@ -510,7 +510,7 @@
                             <div
                                 class="d-flex flex-column justify-content-center align-content-center">
                                 <p class="mb-5 fw-light">HAPPY CUSTOMERS</p>
-                                <img src="/images/testimonial-1.jpg"
+                                <img src="images/testimonial-1.jpg"
                                     class="w-10 m-auto rounded-circle mb-3"
                                     alt="testimonial-1">
                                 <div class="fa-lightblue">
@@ -525,7 +525,7 @@
                             <div
                                 class="d-flex flex-column justify-content-center align-content-center">
                                 <p class="mb-5 fw-light">HAPPY CUSTOMERS</p>
-                                <img src="/images/testimonial-2.jpg"
+                                <img src="images/testimonial-2.jpg"
                                     class="w-10 m-auto rounded-circle mb-3"
                                     alt="testimonial-2">
                                 <div class="fa-lightblue">
@@ -594,8 +594,8 @@
         </section>
 
 
-        <script src="/js/bootstrap.bundle.min.js"></script>
-        <script src="/js/script.js"></script>
+        <script src="js/bootstrap.bundle.min.js"></script>
+        <script src="js/script.js"></script>
 
     </body>
 </html>
